added image to hello1

--- a/Elephant.html
+++ b/Elephant.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div> <img src="/aditya/image/lee-campbell-DtDlVpy-vvQ-unsplash.jpg"></div>
     my first version 
     my second version
 </body>
