upate Elephant.html with Emergency Fix

--- a/Elephant.html
+++ b/Elephant.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>World tour</h1>
+    <p>This is about world tour</p>
     my first version 
     my second version
 </body>
