--- a/Elephant.html
+++ b/Elephant.html
@@ -8,15 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<<<<<<< HEAD
     <h1>World tour</h1>
     <p>This is about world tour</p>
-=======
-    <div> <img src="/aditya/image/lee-campbell-DtDlVpy-vvQ-unsplash.jpg"></div>
-    <div> <img src="/aditya/image/working-at-night.jpg"></div>
-    
->>>>>>> awesom
     my first version 
     my second version
+    third version
 </body>
 </html>
